--- a/AccessControlApi.Infrastructure/AccessControlApi.Infrastructure.csproj
+++ b/AccessControlApi.Infrastructure/AccessControlApi.Infrastructure.csproj
@@ -12,11 +12,8 @@
 
   <ItemGroup>
     <Folder Include="Enums\" />
-    <Folder Include="Extensions\" />
     <Folder Include="Utils\" />
-    <Folder Include="Services\" />
     <Folder Include="Migrations\" />
-    <Folder Include="Repositories\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -25,6 +22,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.11" />
     <PackageReference Include="Npgsql" Version="8.0.5" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.8" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="7.1.0" />
   </ItemGroup>
 
 </Project>
