--- a/AccessControlApi.Domian/AccessControlApi.Domian.csproj
+++ b/AccessControlApi.Domian/AccessControlApi.Domian.csproj
@@ -7,12 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Common\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
     <PackageReference Include="Npgsql" Version="8.0.5" />
   </ItemGroup>
 
