added default admin

--- a/AccessControl.Api/appsettings.json
+++ b/AccessControl.Api/appsettings.json
@@ -7,11 +7,16 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=user_management_db;Username=postgres;Password=admin;Port=5432"
+    "DefaultConnection": "Host=localhost;Database=user_management_db2;Username=postgres;Password=admin;Port=5432"
   },
   "Jwt": {
     "Key": "MySecretKeyHeresMySecretKeyHeres", //Make sure this is at least 32 characters long
-    "Issuer": "eventplanningmanagement",
+    "Issuer": "user_management_db",
     "Audience": "frontend"
+  },
+  "Credentials": {
+    "UserName": "Admin",
+    "Email": "admin@admin.com",
+    "Password": "1234"
   }
 }
