--- a/AccessControlApi.Domian/AccessControlApi.Domian.csproj
+++ b/AccessControlApi.Domian/AccessControlApi.Domian.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Common\" />
+    <Folder Include="Common\NewFolder\" />
   </ItemGroup>
 
   <ItemGroup>
