--- a/AccessControl.Api/appsettings.json
+++ b/AccessControl.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=user_management_db2;Username=postgres;Password=admin;Port=5432"
+    "DefaultConnection": "Host=localhost;Database=user_management_db2;Username=postgres;Password=**;Port=**"
   },
   "Jwt": {
     "Key": "MySecretKeyHeresMySecretKeyHeres", //Make sure this is at least 32 characters long
